@@ -1,15 +1,15 @@
 /****************************************************************************
  *
- * $Source$
- * $Date$
- * $Revision$
- * $State$
- * $Author$
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/strtod.c,v $
+ * $Date: 2003/01/05 12:40:04 $
+ * $Revision: 1.3 $
+ * $State: Exp $
+ * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id$";
+static const char rcs_id[] = "$Id: strtod.c,v 1.3 2003/01/05 12:40:04 admin Exp $";
 #endif
 
 /*-
@@ -1223,6 +1223,13 @@ extern "C"
 #define n_bigtens 2
 #endif
 #endif
+
+#undef atof
+  double
+    atof(const char *string)
+  {
+    return strtod(string, NULL);
+  }
 
   double
     strtod
